--- a/spring-service/Dockerfile
+++ b/spring-service/Dockerfile
@@ -1,5 +1,11 @@
-FROM openjdk:21
-VOLUME /tmp
-COPY target/spring-service-0.0.1-SNAPSHOT.jar spring-service.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/spring-service.jar"]
+# Build Stage 
+FROM maven:3.9.6-sapmachine AS build 
+COPY src /home/app/src 
+COPY pom.xml /home/app 
+RUN mvn -f /home/app/pom.xml clean package 
+
+# Execution Stage 
+FROM openjdk:21 
+COPY --from=build /home/app/target/spring-service-0.0.1-SNAPSHOT.jar /usr/local/lib/demo.jar 
+EXPOSE 8080 
+ENTRYPOINT ["java","-jar","/usr/local/lib/demo.jar"]
