--- a/spring-service/src/main/resources/application.properties
+++ b/spring-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=spring-service
+
+# Database Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123123
+
+# Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+bezkoder.app.jwtCookieName=shounoop
+bezkoder.app.jwtSecret=mtuCT9rfHdCHgc4Ieq1eogXi0Ur0b7U3f123243432423
+bezkoder.app.jwtExpirationMs=30000
