--- a/express-service/package.json
+++ b/express-service/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node app.js"
+    "start": "nodemon --exec npx babel-node app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,18 +14,17 @@
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.4",
     "axios": "^1.7.2",
-    "express": "^4.19.2",
     "bcryptjs": "2.4.3",
     "bluebird": "3.7.2",
     "body-parser": "1.19.1",
     "dotenv": "10.0.0",
-    "ejs": "3.1.6",
+    "express": "^4.19.2",
     "lodash": "4.17.21",
     "mysql2": "2.3.3",
     "nodemon": "2.0.15",
-    "sequelize": "6.13.0",
-    "sequelize-cli": "6.3.0",
     "pg": "8.7.1",
-    "pg-hstore": "2.3.4"
+    "pg-hstore": "2.3.4",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   }
 }
