Api for Loan Product and Loan Type

--- a/express-service/package.json
+++ b/express-service/package.json
@@ -15,18 +15,20 @@
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.4",
     "axios": "^1.7.2",
-    "express": "^4.19.2",
     "bcryptjs": "2.4.3",
     "bluebird": "3.7.2",
     "body-parser": "1.19.1",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
+    "express": "^4.19.2",
     "lodash": "4.17.21",
     "mysql2": "2.3.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "2.0.15",
-    "sequelize": "6.13.0",
-    "sequelize-cli": "6.3.0",
+    "pdf-lib": "^1.17.1",
     "pg": "8.7.1",
-    "pg-hstore": "2.3.4"
+    "pg-hstore": "2.3.4",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   }
 }
