--- a/spring-service/src/main/resources/application.properties
+++ b/spring-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=spring-service
 
-# Database Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123123
+# # Database Properties
+# spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=123123
 
-# Hibernate Properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+# # Hibernate Properties
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
 
 # App Properties
 bezkoder.app.jwtCookieName=shounoop
