fix(express-service): migration, dockerfile

--- a/express-service/Dockerfile
+++ b/express-service/Dockerfile
@@ -4,4 +4,7 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 3000
-CMD ["node", "app.js"]
+# CMD ["node", "app.js"]
+# nodemon --exec npx babel-node app.js
+# CMD ["nodemon", "--exec", "npx", "babel-node", "app.js"]
+CMD ["npm", "start"]
