--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=123456
-MYSQLDB_DATABASE=auth_db
-MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 
+SPRING_MYSQLDB_DATABASE=auth_db
+SPRING_MYSQLDB_LOCAL_PORT=3307
 SPRING_LOCAL_PORT=8080
 SPRING_DOCKER_PORT=8080
+
+EXPRESS_MYSQLDB_DATABASE=expressdb
+EXPRESS_LOCAL_PORT=8081
+EXPRESS_DOCKER_PORT=3000
