--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
-      SPRING_APPLICATION_JSON: '{ "spring.datasource.url"  : "jdbc:mysql://spring-db:$MYSQLDB_DOCKER_PORT/$SPRING_MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false", "spring.datasource.username" : "$MYSQLDB_USER", "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD", "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect", "spring.jpa.hibernate.ddl-auto" : "update" }'
+      SPRING_APPLICATION_JSON: '{ "spring.datasource.url"  : "jdbc:mysql://spring-db:$MYSQLDB_DOCKER_PORT/$SPRING_MYSQLDB_DATABASE?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false", "spring.datasource.username" : "$SPRING_MYSQLDB_USERNAME", "spring.datasource.password" : "$SPRING_MYSQLDB_ROOT_PASSWORD", "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect", "spring.jpa.hibernate.ddl-auto" : "update" }'
     volumes:
       - .m2:/root/.m2 # mount the local maven repository to the container to avoid downloading dependencies every time the container starts
     networks:
@@ -23,7 +23,7 @@ services:
     # restart: unless-stopped # restart the container unless it is stopped by the user, if not specified, the container will not restart 
     env_file: ./.env
     environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+      - MYSQL_ROOT_PASSWORD=$SPRING_MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$SPRING_MYSQLDB_DATABASE
     ports:
       - $SPRING_MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
@@ -34,33 +34,35 @@ services:
 
   express-service:
     build: ./express-service
+    env_file: ./.env
     ports:
-      - '8081:3000'
+      - $EXPRESS_LOCAL_PORT:$EXPRESS_DOCKER_PORT
     environment:
-      DB_HOST: express-db
-      DB_USERNAME: root
-      DB_PASSWORD: 123456
-      DB_DATABASE_NAME: expressdb
-      DB_DIALECT: mysql
-      DB_SSL: false
+      DB_HOST: $EXPRESS_MYSQLDB_HOST
+      DB_USERNAME: $EXPRESS_MYSQLDB_USERNAME
+      DB_PASSWORD: $EXPRESS_MYSQLDB_ROOT_PASSWORD
+      DB_DATABASE_NAME: $EXPRESS_MYSQLDB_DATABASE
+      DB_DIALECT: $EXPRESS_MYSQLDB_DIALLCT
+      DB_SSL: $EXPRESS_MYSQLDB_SSL
     depends_on:
       - express-db
     networks:
       - app-network
     expose:
-      - '3000' # expose the port to other services in the same network
+      - $EXPRESS_DOCKER_PORT # expose the port to other services in the same network
 
   express-db:
     image: mysql:8
+    env_file: ./.env
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: expressdb
+      MYSQL_ROOT_PASSWORD: $EXPRESS_MYSQLDB_ROOT_PASSWORD
+      MYSQL_DATABASE: $EXPRESS_MYSQLDB_DATABASE
     volumes:
       - express-db-data:/var/lib/mysql # express-db-data is the name of the volume, /var/lib/mysql is the path where mysql stores data inside the container
     networks:
       - app-network
     ports:
-      - '3308:3306'
+      - $EXPRESS_MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
 
 volumes:
   spring-db-data:
