feat: make a call api from spring service to express service

--- a/spring-service/src/main/resources/application.properties
+++ b/spring-service/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.application.name=spring-service
 # App Properties
 bezkoder.app.jwtCookieName=shounoop
 bezkoder.app.jwtSecret=mtuCT9rfHdCHgc4Ieq1eogXi0Ur0b7U3f123243432423
-bezkoder.app.jwtExpirationMs=30000
+bezkoder.app.jwtExpirationMs=86400000
