--- a/express-service/package.json
+++ b/express-service/package.json
@@ -29,6 +29,13 @@
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
     "sequelize": "6.13.0",
-    "sequelize-cli": "6.3.0"
+    "sequelize-cli": "6.3.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.6.3",
+    "puppeteer": "^3.0.1",
+    "aws-sdk": "^2.1614.0"
+  },
+  "devDependencies": {
+    "multer": "^1.4.5-lts.1"
   }
 }
