feat(api-gateway): crud loan method

--- a/spring-service/src/main/resources/application.properties
+++ b/spring-service/src/main/resources/application.properties
@@ -14,5 +14,4 @@ spring.jpa.hibernate.ddl-auto=update
 shounoop.app.jwtCookieName=shounoop
 shounoop.app.jwtSecret=mtuCT9rfHdCHgc4Ieq1eogXi0Ur0b7U3f123243432423
 shounoop.app.jwtExpirationMs=86400000
-# shounoop.app.expressServiceUrl=http://express-service:3000/api/v1
-shounoop.app.expressServiceUrl=http://localhost:3000/api/v1
+shounoop.app.expressServiceUrl=http://localhost:3000/api
