--- a/spring-service/pom.xml
+++ b/spring-service/pom.xml
@@ -78,9 +78,19 @@
 		</dependency>
 
 		<dependency>
-		 	<groupId>org.projectlombok</groupId>
+			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -111,7 +121,7 @@
 						</exclude>
 					</excludes>
 				</configuration>
-      </plugin>
+			</plugin>
 		</plugins>
 	</build>
 
