--- a/express-service/package.json
+++ b/express-service/package.json
@@ -13,26 +13,27 @@
     "@babel/core": "7.15.4",
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.4",
+    "aws-sdk": "^2.1614.0",
     "axios": "^1.7.2",
     "bcryptjs": "2.4.3",
     "bluebird": "3.7.2",
     "body-parser": "1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "express": "^4.19.2",
     "lodash": "4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "2.3.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.6.3",
     "nodemon": "2.0.15",
     "number-to-words": "^1.2.4",
     "pdf-lib": "^1.17.1",
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.13.0",
-    "sequelize-cli": "6.3.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.6.3",
     "puppeteer": "^3.0.1",
-    "aws-sdk": "^2.1614.0"
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   }
 }
